css/style_laptop.css
#portfolio {
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    margin-bottom: 100px;
    min-height: 100vh;
}

#portfolio article {
  margin: 30px 20px;
}

nav {
  padding: 3px 10px;
}

nav a i.fa {
  font-size: 1.3em;
  font-weight: 700;
}

nav a:hover, nav a i.fa:hover {
  font-size: 1.3em;
}

nav a {
  font-size: 1.3em;
  font-weight: 700;
}

.enlight {
  display: none;
}

@media (min-width: 1420px) {
  #portfolio article {
    min-width: 350px;
    margin: 5px 20px ;
  }
  a.portfolioanchor {
    top: -35px;
  }
}

